<resources>
    <string name="app_name">DemoProject</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="just_for_your_needs">Just for your needs</string>
    <string name="explore_more">Explore more</string>
    <string name="product_title">Product Title</string>
    <string name="product_price">Product Price</string>
    <string name="euro_1800">1800 \u20ac</string>
    <string name="share">SHARE</string>
    <string name="explore">EXPLORE</string>
    <string name="invite_friends_title">Invite friends and earn bid points</string>
    <string name="invite_friends_description">You can earn bonus points by inviting your friends to
    join community. Also you can gain bonus points by
    sharing something your friends might be interested in.</string>
    <string name="toast_message">you clicked on %1$s</string>
    <string name="settings">Settings</string>
    <string name="add">Add</string>
</resources>
